--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ archives_base_name = starter
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 fabric_version=0.4.32+build.292-1.15
+jankson_version=2.0.1+j1.2.0
+cotton_version=1.0.1
