--- a/gradle.properties
+++ b/gradle.properties
@@ -5,12 +5,12 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/use
 minecraft_version=1.15.2
 yarn_build=14
-loader_version=0.7.8+build.186
+loader_version=0.8.2+build.194
 
 # Mod Properties
 mod_version = 1.0.0
 maven_group = io.github.cottonmc
-archives_base_name = starter
+archives_base_name = canonica
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
